# CallbackHandler

./: .gitignore  1  DEPS  build_all_android.sh  gradle.properties  settings.gradle.kts  test_build.sh
ReadMe/Gradle/: CmpVersion.md
ReadMe/LearnCmake/: Cmake_Compiler学习.md  Cmake_add_library学习.md  Cmake_find_program学习.md  Cmake_link_directories学习.md  Cmake_platform学习.md  Cmake_set_target_properties学习.md  Cmake_target学习.md
ReadMe/UseCmake/: Path.md
app/: .gitignore  abseil-cpp.gradle  build.gradle.kts  curl.gradle  flatbuffers.gradle  glog.gradle  leveldb.gradle  protobuf.gradle  snappy.gradle
app/src/androidTest/java/com/mgg/callbackhandler/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.md
app/src/main/cpp/: AutoBitmap.cc  CMakeLists.txt  CallbackHandler.h  CallbackUtils.cpp  CallbackUtils.h  CheckEnv.cmake  CheckOut.cmake  Dependencies.cmake  Paths.cmake  Platform.cmake  Test.cpp  Test.h  VirtualMachineEnv.cpp  VirtualMachineEnv.h  always_false.h  debug.cpp  downcast.h  jni_android.cc  jni_android.h  jni_util.cc  jni_util.h  jni_weak_ref.cc  linker_jni.cc  linker_jni.h  linker_jni_onload.cc  load_library.cpp  macros.h  native-lib.cpp  scoped_java_ref.cc  spdlog.cmake  string_conversion.cc  string_conversion.h  test_jni.cc  thread_local.h
app/src/main/cpp/cmake/: DownloadCpuinfo.cmake  FindAtomics.cmake
app/src/main/cpp/common/: CallbackUtils.cpp
app/src/main/cpp/flatbuffers/: CMakeLists.txt
app/src/main/cpp/leveldb/: CMakeLists.txt
app/src/main/cpp/log/: log.cc  log.h  log_android.cc  log_android_callback.cc  log_assert.h  log_level.h  log_settings.cc  log_settings.h  log_settings_state.cc  logging.cc  logging.h
app/src/main/cpp/memory/: Condition.h  Invocable.h  mutex.h  mutex_pthread.cc  singleton.h
app/src/main/cpp/platform/android/: jni_android.cc  jni_android.h  jni_weak_ref.cc  jni_weak_ref.h  load_class.h  scoped_java_ref.cc  scoped_java_ref.h  string_conversion.cc  string_conversion.h  thread_local.cc  thread_local.h  util_android.cc  util_android.h
app/src/main/cpp/snappy/: CMakeLists.txt
app/src/main/cpp/thread/: ThreadUtils.cpp  ThreadUtils.h
app/src/main/java/com/mgg/callbackhandler/: AppDataSource.kt  HarmonyOsUtil.kt  JNIUtils.java  LCItem.kt  LibCheckerApp.java  LibCheckerApp.kt  LifetimeAssert.java  LocalAppDataSource.kt  Log.java  MainActivity.kt  NioUtils.java  OsUtils.kt  PackageInfoExtensions.kt  PackageManagerCompat.kt  ReadElf.java  SystemServices.kt  Test.java
app/src/main/java/org/chromium/base/library_loader/: Linker.java  LinkerJni.java  StreamUtil.java  TimeUtils.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mgg/callbackhandler/: ExampleUnitTest.kt
scripts/macos/: build.sh
utils/: git-sync-deps.py
version/: Version.h
